--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,6 @@ textarea {
     background-color: #999;
     color: #000;
     font-size: 0.95rem;
-    /*border: 1px solid #333;*/
     border-radius: 5px;
     padding: 2px 0px;
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3) inset, 0px 1px 0px rgba(255, 255, 255, 0.1), 0px -1px 0px rgba(0, 0, 0, 0.5);
@@ -167,8 +166,8 @@ textarea {
     margin-bottom: 1rem;
     margin-top: 4px;
     line-height: 1.25rem;
-    max-width: 100%;
-    max-height: 5rem;
+    width: 100%;
+    height: 5rem;
 }
 
 #out {
@@ -186,10 +185,4 @@ textarea {
     margin-top: 0.6rem;
     font-family: 'Delius Swash Caps', cursive;
     font-size: 1.5rem;
-}
-
-footer {
-    margin: 2rem auto;
-    width: 66%;
-    border-top: 1px solid #7da7ca;
 }
