--- a/css/style.css
+++ b/css/style.css
@@ -121,31 +121,52 @@ header > h1 {
     margin: 0 auto;
 }
 
-#content > #main {
-    margin: 0 auto;
+#pageResult {
+    display: none;
 }
 
-#main {
+.page {
+    margin: 0 auto;
     padding-left: 4rem;
     padding-right: 4rem;
 }
 
-#main > section {
+.page > section {
     width: 66%;
     margin: 0 auto;
     text-align: center;
 }
 
-.pre {
+.page > .pre {
     line-height: 1.3rem;
     margin-top: 3.5rem;
     margin-bottom: 2.5rem;
     margin-left: auto;
     margin-right: auto;
     width: 66%;
+    text-align: justify;
+}
+
+.page > .out {
+    box-sizing: border-box;
+    color: #000;
+    font-size: 0.95rem;
+    padding: 0rem 3rem;
+    margin-bottom: 1rem;
+    margin-top: 0.25rem;
+    line-height: 1.25rem;
+}
+
+.page > .fn {
+    margin: 2rem auto;
+    width: 66%;
+    font-size: 0.75rem;
+    line-height: 1rem;
+    text-align: left;
 }
 
 textarea {
+    box-sizing: border-box; 
     max-width: 100%;
     resize: none;
     background-color: #999;
@@ -153,36 +174,10 @@ textarea {
     font-size: 0.95rem;
     border-radius: 5px;
     padding: 2px 0px;
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3) inset, 0px 1px 0px rgba(255, 255, 255, 0.1), 0px -1px 0px rgba(0, 0, 0, 0.5);
-}
-
-#out > .result {
-    background-color: #999;
-    color: #000;
-    font-size: 0.95rem;
-    border: 1px solid #7da7ca;
-    border-radius: 5px;
-    padding: 4px 0px;
     margin-bottom: 1rem;
-    margin-top: 4px;
-    line-height: 1.25rem;
-    width: 100%;
-    height: 5rem;
-}
-
-#out {
-    display: none;
-}
-
-.fn {
-    margin: 2rem auto;
-    width: 66%;
-    font-size: 0.75rem;
-    line-height: 1rem;
 }
 
 .actionButton {
-    margin-top: 0.6rem;
     font-family: 'Delius Swash Caps', cursive;
     font-size: 1.5rem;
 }
